# Doodle

./: .gitignore  CMakeLists.txt  Doodle.sln  Doodle.vcxproj  Doodle.vcxproj.filters  LICENSE.md  README.md
src/: AnnealingOptimizer.cpp  AnnealingOptimizer.h  AnnealingcOptimizer.cpp  GeneticOptimizer.cpp  GeneticOptimizer.h  Optimizer.cpp  Optimizer.h  Phenotype.cpp  Phenotype.h  Solution.cpp  Solution.h  Utils.h  doodle.cpp
